# askadskii

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  askadskii.density.html  askadskii.html  askadskii.logging.html  askadskii.utils.dataset.html  askadskii.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.doctrees/: askadskii.density.doctree  askadskii.doctree  askadskii.logging.doctree  askadskii.utils.dataset.doctree  askadskii.utils.doctree  environment.pickle  index.doctree  modules.doctree
.github/workflows/: CI.yaml  docs.yaml
_notes/: release.md  sphinx.md
_sources/: askadskii.density.rst.txt  askadskii.logging.rst.txt  askadskii.rst.txt  askadskii.utils.dataset.rst.txt  askadskii.utils.rst.txt  modules.rst.txt
docs_src/: conf.py  index.rst
src/askadskii/: __init__.py  __main__.py
src/askadskii/core/: _core.py  askadskii_hydrocarbon.csv
src/askadskii/density/: __init__.py  _core.py
src/askadskii/density/_deprecated/: _core.py
src/askadskii/utils/dataset/: .dataset  __init__.py  _constants.py  _decrypt.py  _encrypt.py  dataset
tests/: test_import.py
