# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = askadskii
version = attr: askadskii.__version__
description =
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
license_files = LICENSE
# https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
author = yu9824
maintainer = yu9824
url = https://github.com/yu9824/askadskii
project_urls =
    Homepage = https://github.com/yu9824/askadskii
    PyPI = https://pypi.org/project/askadskii/
    Source = https://github.com/yu9824/askadskii
    Tracker = https://github.com/yu9824/askadskii/issues
    Changelog = https://github.com/yu9824/askadskii/blob/main/CHANGELOG.md

[options]
package_dir=
    =src
packages=find:
python_requires = >= 3.7
install_requires =
    typing-extensions >= 4.0.0; python_version < '3.8'

[options.packages.find]
where=src

[options.extras_require]
test = pytest
dev = twine
      wheel
      build
docs = sphinx
       sphinx_rtd_theme
       sphinx-markdown-tables
       recommonmark
gui = TkEasyGUI

[options.entry_points]
console_scripts =
    askadskii = askadskii.__main__:entrypoint
# gui_scripts =
#     askadskii-gui = askadskii:main_gui
